# zuppi-linphone

./: CMakeLists.txt
Linphone/: CMakeLists.txt
Linphone/core/: App.cpp
Linphone/core/account/: AccountCore.cpp  AccountDeviceCore.cpp  AccountDeviceGui.cpp  AccountDeviceList.cpp  AccountDeviceProxy.cpp  AccountGui.cpp  AccountList.cpp  AccountProxy.cpp
Linphone/core/address-books/carddav/: CarddavCore.cpp  CarddavGui.cpp  CarddavList.cpp  CarddavProxy.cpp
Linphone/core/address-books/ldap/: LdapCore.cpp  LdapGui.cpp  LdapList.cpp  LdapProxy.cpp
Linphone/core/call/: CallCore.cpp  CallGui.cpp  CallList.cpp  CallProxy.cpp
Linphone/core/call-history/: CallHistoryCore.cpp  CallHistoryGui.cpp  CallHistoryList.cpp  CallHistoryProxy.cpp
Linphone/core/camera/: CameraDummy.cpp  CameraGui.cpp  PreviewManager.cpp
Linphone/core/conference/: ConferenceCore.cpp  ConferenceGui.cpp  ConferenceInfoCore.cpp  ConferenceInfoGui.cpp  ConferenceInfoList.cpp  ConferenceInfoProxy.cpp
Linphone/core/fps-counter/: FPSCounter.cpp
Linphone/core/friend/: FriendCore.cpp  FriendGui.cpp
Linphone/core/logger/: QtLogger.cpp
Linphone/core/login/: LoginPage.cpp
Linphone/core/notifier/: Notifier.cpp
Linphone/core/participant/: ParticipantCore.cpp  ParticipantDeviceCore.cpp  ParticipantDeviceGui.cpp  ParticipantDeviceList.cpp  ParticipantDeviceProxy.cpp  ParticipantGui.cpp  ParticipantList.cpp  ParticipantProxy.cpp
Linphone/core/path/: Paths.cpp
Linphone/core/payload-type/: DownloadablePayloadTypeCore.cpp  PayloadTypeCore.cpp  PayloadTypeGui.cpp  PayloadTypeList.cpp  PayloadTypeProxy.cpp
Linphone/core/phone-number/: PhoneNumber.cpp  PhoneNumberList.cpp  PhoneNumberProxy.cpp
Linphone/core/proxy/: LimitProxy.cpp  ListProxy.cpp  Proxy.cpp  SortFilterProxy.cpp
Linphone/core/register/: RegisterPage.cpp
Linphone/core/screen/: ScreenList.cpp  ScreenProxy.cpp
Linphone/core/search/: MagicSearchList.cpp  MagicSearchProxy.cpp
Linphone/core/setting/: SettingsCore.cpp
Linphone/core/singleapplication/: SingleApplicationDBus.cpp
Linphone/core/timezone/: TimeZone.cpp  TimeZoneList.cpp  TimeZoneProxy.cpp
Linphone/core/variant/: VariantList.cpp
Linphone/core/videoSource/: VideoSourceDescriptorCore.cpp  VideoSourceDescriptorGui.cpp
Linphone/model/account/: AccountDeviceModel.cpp  AccountManager.cpp  AccountManagerServicesModel.cpp  AccountManagerServicesRequestModel.cpp  AccountModel.cpp
Linphone/model/address-books/carddav/: CarddavModel.cpp
Linphone/model/address-books/ldap/: LdapModel.cpp
Linphone/model/auth/: OIDCModel.cpp
Linphone/model/call/: CallModel.cpp
Linphone/model/call-history/: CallHistoryModel.cpp
Linphone/model/cli/: CliModel.cpp
Linphone/model/conference/: ConferenceInfoModel.cpp  ConferenceModel.cpp  ConferenceSchedulerModel.cpp
Linphone/model/core/: CoreModel.cpp
Linphone/model/friend/: FriendModel.cpp
Linphone/model/logger/: LoggerListener.cpp  LoggerModel.cpp
Linphone/model/object/: SafeObject.cpp  VariantObject.cpp
Linphone/model/participant/: ParticipantDeviceModel.cpp  ParticipantModel.cpp
Linphone/model/payload-type/: PayloadTypeModel.cpp
Linphone/model/search/: MagicSearchModel.cpp
Linphone/model/setting/: MediastreamerUtils.cpp  SettingsModel.cpp
Linphone/model/tool/: ToolModel.cpp
Linphone/model/videoSource/: VideoSourceDescriptorModel.cpp
Linphone/tool/: CMakeLists.txt  Constants.cpp  EnumsToString.cpp  LinphoneEnums.cpp  Utils.cpp
Linphone/tool/file/: FileDownloader.cpp  FileExtractor.cpp
Linphone/tool/native/: DesktopToolsLinux.cpp  DesktopToolsMacOs.cpp  DesktopToolsWindows.cpp
Linphone/tool/native/screen-saver/: ScreenSaverDBus.cpp  ScreenSaverXdg.cpp
Linphone/tool/providers/: AvatarProvider.cpp  ImageProvider.cpp  ScreenProvider.cpp
Linphone/tool/request/: AuthenticationDialog.cpp  RequestDialog.cpp
Linphone/tool/thread/: Thread.cpp
Linphone/view/Control/Button/: Button.qml  CalendarComboBox.qml  CheckBox.qml  CheckableButton.qml  ComboBox.qml  CountryIndicatorCombobox.qml  HelpIconLabelButton.qml  IconLabelButton.qml  MediumButton.qml  MenuButton.qml  PopupButton.qml  RadioButton.qml  SecurityRadioButton.qml  Slider.qml  SmallButton.qml  Switch.qml
Linphone/view/Control/Button/Settings/: ComboSetting.qml  SwitchSetting.qml
Linphone/view/Control/Container/: Carousel.qml  FormItemLayout.qml  ScrollBar.qml  Section.qml  TabBar.qml  VerticalTabBar.qml
Linphone/view/Control/Container/Call/: ActiveSpeakerLayout.qml  CallGridLayout.qml  CallHistoryLayout.qml  CallLayout.qml
Linphone/view/Control/Container/Contact/: ContactLayout.qml
Linphone/view/Control/Container/Main/: MainRightPanel.qml
Linphone/view/Control/Display/: BusyIndicator.qml  EffectImage.qml  Flickable.qml  GradientRectangle.qml  ProgressBar.qml  RoundedPane.qml  Sticker.qml  TemporaryText.qml  Text.qml  ToolTip.qml
Linphone/view/Control/Display/Call/: CallListView.qml  CallStatistics.qml
Linphone/view/Control/Display/Contact/: AllContactListView.qml  Avatar.qml  Contact.qml  ContactListItem.qml  ContactListView.qml  Voicemail.qml
Linphone/view/Control/Display/Meeting/: MeetingListView.qml
Linphone/view/Control/Display/Participant/: ParticipantDeviceListView.qml  ParticipantListView.qml
Linphone/view/Control/Display/Settings/: SettingsMenuItem.qml
Linphone/view/Control/Form/Call/: ChangeLayoutForm.qml
Linphone/view/Control/Form/Login/: LoginForm.qml
Linphone/view/Control/Form/Settings/: EncryptionSettings.qml  MultimediaSettings.qml  ScreencastSettings.qml
Linphone/view/Control/Input/: Calendar.qml  DecoratedTextField.qml  DigitInput.qml  NumericPad.qml  PhoneNumberInput.qml  SearchBar.qml  TextArea.qml  TextField.qml  TimeComboBox.qml
Linphone/view/Control/Popup/: InformationPopup.qml  NumericPadPopup.qml  Popup.qml
Linphone/view/Control/Popup/Dialog/: AuthenticationDialog.qml  Dialog.qml  ZrtpAuthenticationDialog.qml
Linphone/view/Page/Main/: AbstractMainPage.qml
Linphone/view/Page/Window/: AbstractWindow.qml
Linphone/view/Style/: AppIcons.qml
Linphone/view/Test/: ItemsTest.qml
(+49 files in other folders)
